set(SOURCES 
    "Source/main.cpp")

add_executable(twgsl ${SOURCES})
target_compile_options(twgsl PRIVATE -Oz)
target_compile_options(twgsl PRIVATE -O3)
target_compile_options(twgsl PUBLIC -sALLOW_MEMORY_GROWTH=1)
target_link_libraries(twgsl PRIVATE tint_api)
target_link_options(twgsl PRIVATE -sEXPORTED_FUNCTIONS=["_test","_spirv_to_wgsl","_free","_malloc"])
target_link_options(twgsl PRIVATE -sEXPORTED_RUNTIME_METHODS=[])
target_link_options(twgsl PRIVATE -sMODULARIZE=1)
target_link_options(twgsl PRIVATE --js-library=${CMAKE_CURRENT_SOURCE_DIR}/Source/callbacks.js)
target_link_options(twgsl PRIVATE --extern-pre-js=${CMAKE_CURRENT_SOURCE_DIR}/head.js)
target_link_options(twgsl PRIVATE --extern-post-js=${CMAKE_CURRENT_SOURCE_DIR}/tail.js)
target_link_options(twgsl PRIVATE --llvm-lto 2)
target_link_options(twgsl PRIVATE --closure 1)
target_link_options(twgsl PUBLIC -sALLOW_MEMORY_GROWTH=1)
target_link_options(twgsl PRIVATE -Oz)
target_link_options(twgsl PRIVATE -O3)
target_link_options(twgsl PRIVATE -flto)
